Hover effects from a GestureTapDown are dismissed by a GestureTap on the hover element https://bugs.webkit.org/show_bug.cgi?id=103283

Reviewed by Antonio Gomes.

Source/WebCore:

On a GestureTap event over an element that was made visible as a hover effect, the
GestureTap should be applied to that element and the hover effects should not be dismissed.
A GestureTap or a mouse move to a location outside of the element should still dismiss the
hover effects.

Tests: fast/events/touch/gesture/gesture-tap-hover-clear.html
       fast/events/touch/gesture/gesture-tap-on-hover-element.html

* page/EventHandler.cpp:
(WebCore::EventHandler::handleGestureEvent):

LayoutTests:

Two layout tests added. See descriptions inline.

* fast/events/touch/gesture/gesture-tap-hover-clear-expected.txt: Added.
* fast/events/touch/gesture/gesture-tap-hover-clear.html: Added.
      Tests that a GestureTap or a mouse move outside of the hovered element
      clears its hover effects.
* fast/events/touch/gesture/gesture-tap-on-hover-element-expected.txt: Added.
* fast/events/touch/gesture/gesture-tap-on-hover-element.html: Added.
      Tests that a GestureTap on an element which has been made visible as
      a hover effect is dispatched to the element and does not dismiss the
      hover effect.
* platform/chromium/fast/events/touch/gesture/gesture-tap-hover-clear-expected.txt: Added.
* platform/chromium/fast/events/touch/gesture/gesture-tap-on-hover-element-expected.txt: Added.


Canonical link: https://commits.webkit.org/131024@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146224 268f45cc-cd09-0410-ab3c-d52691b4dbfc